--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.13.1",
     "express-session": "^1.13.0",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^5.7.0",
     "mongoose": "^4.4.6",
     "morgan": "~1.6.1",
     "nodemailer": "^2.2.1",
