--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^5.7.0",
     "mongoose": "^4.4.6",
     "morgan": "~1.6.1",
+    "multer": "^1.1.0",
     "nodemailer": "^2.2.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
