--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^5.7.0",
     "lodash": "^4.11.1",
+    "mkdirp": "^0.5.1",
     "mongoose": "^4.4.6",
     "morgan": "~1.6.1",
     "multer": "^1.1.0",
