--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-session": "^1.13.0",
+    "fs-extra": "^0.28.0",
     "jade": "~1.11.0",
     "jsonwebtoken": "^5.7.0",
     "lodash": "^4.11.1",
